[gd_scene load_steps=12 format=2]

[ext_resource path="res://new_buttongroup.tres" type="ButtonGroup" id=1]
[ext_resource path="res://LevelSelectScreen.gd" type="Script" id=2]
[ext_resource path="res://images/level_select_background.png" type="Texture" id=3]
[ext_resource path="res://images/description_background.png" type="Texture" id=4]
[ext_resource path="res://images/level_button.png" type="Texture" id=5]
[ext_resource path="res://images/level_button_disabled.png" type="Texture" id=6]
[ext_resource path="res://font.tres" type="DynamicFont" id=7]
[ext_resource path="res://images/level_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://Archeologicaps.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 9 )

[node name="LevelSelectScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_right = 640.0
margin_bottom = 30.0
custom_constants/margin_top = 30

[node name="CenterContainer4" type="CenterContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 34.0
margin_right = 640.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer4"]
margin_left = 218.0
margin_right = 422.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Choose Temple"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 64.0
margin_right = 640.0
margin_bottom = 94.0
custom_constants/margin_top = 30

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 98.0
margin_right = 640.0
margin_bottom = 268.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer"]
margin_left = 33.0
margin_right = 607.0
margin_bottom = 170.0
alignment = 1

[node name="Level1" type="TextureButton" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 170.0
toggle_mode = true
group = ExtResource( 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="LevelName" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level1/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 125.0
margin_bottom = 25.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 7 )
align = 1
autowrap = true
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 144.0
margin_bottom = 170.0
custom_constants/margin_right = 10

[node name="Level2" type="TextureButton" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 278.0
margin_bottom = 170.0
toggle_mode = true
group = ExtResource( 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="LevelName" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level2/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 125.0
margin_bottom = 25.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 7 )
align = 1
autowrap = true
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 292.0
margin_bottom = 170.0
custom_constants/margin_right = 10

[node name="Level3" type="TextureButton" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 296.0
margin_right = 426.0
margin_bottom = 170.0
toggle_mode = true
group = ExtResource( 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="LevelName" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level3/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 125.0
margin_bottom = 25.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 7 )
align = 1
autowrap = true
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level3"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 430.0
margin_right = 440.0
margin_bottom = 170.0
custom_constants/margin_right = 10

[node name="Level4" type="TextureButton" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 444.0
margin_right = 574.0
margin_bottom = 170.0
toggle_mode = true
group = ExtResource( 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level4"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="LevelName" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level4/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 125.0
margin_bottom = 25.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 7 )
align = 1
autowrap = true
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level4"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 272.0
margin_right = 640.0
margin_bottom = 292.0
custom_constants/margin_top = 20

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 296.0
margin_right = 640.0
margin_bottom = 416.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer2"]
margin_left = 170.0
margin_right = 470.0
margin_bottom = 120.0
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer2/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer2/TextureRect/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 110.0

[node name="CurseName" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer2/TextureRect/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 14.0
size_flags_vertical = 1

[node name="CurseDescription" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer2/TextureRect/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 420.0
margin_right = 640.0
margin_bottom = 430.0
custom_constants/margin_top = 10

[node name="CenterContainer3" type="CenterContainer" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_top = 434.0
margin_right = 640.0
margin_bottom = 454.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer3"]
margin_left = 271.0
margin_right = 368.0
margin_bottom = 20.0
alignment = 1

[node name="TempleSelect" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer/CenterContainer3/HBoxContainer2"]
margin_right = 97.0
margin_bottom = 20.0
disabled = true
text = "Enter Temple"

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level1" to="." method="_on_LevelButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level2" to="." method="_on_LevelButton_pressed" binds= [ 2 ]]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level3" to="." method="_on_LevelButton_pressed" binds= [ 3 ]]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/CenterContainer/HBoxContainer/Level4" to="." method="_on_LevelButton_pressed" binds= [ 4 ]]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/CenterContainer3/HBoxContainer2/TempleSelect" to="." method="_on_TempleSelect_pressed"]
